# internal/server/openaapigenerator/go/api.go
@@ -1,0 +1,39 @@
+/*
+ * Todo app OAS
+ *
+ * OpenApi specification for a todo application
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package test
+
+import (
+	"context"
+	"net/http"
+)
+
+
+
+// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
+// The DefaultApiRouter implementation should parse necessary information from the http request, 
+// pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
+type DefaultApiRouter interface { 
+	CreateTodo(http.ResponseWriter, *http.Request)
+	DeleteTodo(http.ResponseWriter, *http.Request)
+	GetTodos(http.ResponseWriter, *http.Request)
+	UpdateTodo(http.ResponseWriter, *http.Request)
+}
+
+
+// DefaultApiServicer defines the api actions for the DefaultApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it, 
+// while the service implementation can ignored with the .openapi-generator-ignore file 
+// and updated with the logic required for the API.
+type DefaultApiServicer interface { 
+	CreateTodo(context.Context, Todo) (ImplResponse, error)
+	DeleteTodo(context.Context, int32) (ImplResponse, error)
+	GetTodos(context.Context, string, string) (ImplResponse, error)
+	UpdateTodo(context.Context, int32, string, string) (ImplResponse, error)
+}
