# internal/server/openaapigenerator/go/api_default_service.go
@@ -1,0 +1,84 @@
+/*
+ * Todo app OAS
+ *
+ * OpenApi specification for a todo application
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package test
+
+import (
+	"context"
+	"net/http"
+	"errors"
+)
+
+// DefaultApiService is a service that implents the logic for the DefaultApiServicer
+// This service should implement the business logic for every endpoint for the DefaultApi API. 
+// Include any external packages or services that will be required by this service.
+type DefaultApiService struct {
+}
+
+// NewDefaultApiService creates a default api service
+func NewDefaultApiService() DefaultApiServicer {
+	return &DefaultApiService{}
+}
+
+// CreateTodo - 
+func (s *DefaultApiService) CreateTodo(ctx context.Context, todo Todo) (ImplResponse, error) {
+	// TODO - update CreateTodo with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(201, Todo{}) or use other options such as http.Ok ...
+	//return Response(201, Todo{}), nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("CreateTodo method not implemented")
+}
+
+// DeleteTodo - 
+func (s *DefaultApiService) DeleteTodo(ctx context.Context, todoId int32) (ImplResponse, error) {
+	// TODO - update DeleteTodo with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(204, {}) or use other options such as http.Ok ...
+	//return Response(204, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("DeleteTodo method not implemented")
+}
+
+// GetTodos - 
+func (s *DefaultApiService) GetTodos(ctx context.Context, user string, status string) (ImplResponse, error) {
+	// TODO - update GetTodos with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, []Todo{}) or use other options such as http.Ok ...
+	//return Response(200, []Todo{}), nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("GetTodos method not implemented")
+}
+
+// UpdateTodo - 
+func (s *DefaultApiService) UpdateTodo(ctx context.Context, todoId int32, task string, status string) (ImplResponse, error) {
+	// TODO - update UpdateTodo with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, Todo{}) or use other options such as http.Ok ...
+	//return Response(200, Todo{}), nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("UpdateTodo method not implemented")
+}
+
