# internal/server/openaapigenerator/go/impl.go
@@ -1,0 +1,16 @@
+/*
+ * Todo app OAS
+ *
+ * OpenApi specification for a todo application
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package test
+
+//Implementation response defines an error code with the associated body
+type ImplResponse struct {
+	Code int
+	Body interface{}
+}
