# internal/server/openaapigenerator/main.go
@@ -1,0 +1,28 @@
+/*
+ * Todo app OAS
+ *
+ * OpenApi specification for a todo application
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package main
+
+import (
+	"log"
+	"net/http"
+
+	test "github.com/GIT_USER_ID/GIT_REPO_ID/go"
+)
+
+func main() {
+	log.Printf("Server started")
+
+	DefaultApiService := test.NewDefaultApiService()
+	DefaultApiController := test.NewDefaultApiController(DefaultApiService)
+
+	router := test.NewRouter(DefaultApiController)
+
+	log.Fatal(http.ListenAndServe(":8080", router))
+}
